# picoref

./: .gitignore  Cargo.toml  LICENSE  README.md  completion.sh  export.sh  flake.nix  rust-toolchain.toml
js/: build.js  package-lock.json  package.json
js/src/: bibtex-converter.js
src/: bibtex.rs  citekey.rs  config.rs  date.rs  entry.rs  main.rs  ops.rs  pdf.rs  regex.rs  source.rs  tags.rs
src/fetch/: arxiv.rs  biorxiv.rs  mod.rs  openalex.rs  osf.rs  pmc.rs  semantic_scholar.rs  unpaywall.rs
