[package]
name = "picoref"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.72"
biblatex = { version = "0.8.1", features = ["serde"] }
clap = { version = "4.3.19", features = ["derive"] }
deunicode = "1.3.3"
indicatif = "0.17.7"
itertools = "0.11.0"
once_cell = "1.18.0"
regex = { version = "1.9.1", features = ["std"] }
rquickjs = { version = "0.9.0", features = ["loader", "macro"] }
serde = { version = "1.0.178", features = ["derive"] }
serde_json = "1.0.104"
serde_yaml = "0.9.25"
toml = "^0.8.23"
ureq = { version = "2.7.1", features = ["json"] }
